adjusted some css styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
   <%- include('./partials/_nav'); %>
 
   <div class="notification">
-    <div class="one-notification">
+    <!-- <div class="one-notification">
       <div class="notification-text">
         <span>Hello <span>Kira,</span></span>
         <p>Your order <span>(#order_id)</span> is being processed. The estimated time for pick up is in <span>30</span> minutes. We will notify you again once the food is ready! See you soon!</p>
@@ -38,7 +38,7 @@
       <footer>
         <button class="ok-btn">OK</button>
       </footer>
-    </div>
+    </div> -->
   </div>
 
   <div class="menu-cart">
