--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,35 +2,38 @@ body {
   display: flex;
   flex-direction: column;
 
+  .navbar-brand {
+    font-size: 2rem;
+  }
+  .navbar {
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    .loggedin {
+      color: white;
+      text-decoration: none;
+    }
+  }
+
   min-height: 100vh;
 
-  background: rgb(163, 208, 219);
-  background: linear-gradient(
-    227deg,
-    rgba(163, 208, 219, 1) 0%,
-    rgba(163, 176, 219, 1) 20%,
-    rgba(163, 173, 219, 1) 34%,
-    rgba(163, 219, 208, 1) 59%,
-    rgba(163, 208, 219, 1) 74%,
-    rgba(163, 208, 219, 1) 100%
-  );
+  background-color: #8d949b;
 
   .notification {
     display: flex;
     flex-direction: column;
-    margin-top:1.5rem;
+    margin-top: 1.5rem;
     margin-bottom: 1rem;
-    .one-notification{
-      display:flex;
+    .one-notification {
+      display: flex;
       flex-direction: column;
-      background-color: whitesmoke;
-      border:black 3px solid;
+      background-color: none;
+      border: black 3px solid;
       width: 90%;
       margin-left: 5vw;
       margin-right: 5vw;
       margin-bottom: 1rem;
       padding-bottom: 1rem;
-      font-size: 1.10rem;
+      font-size: 1.1rem;
       .notification-text {
         // background-color: violet;
         // border: chartreuse 4px dashed;
@@ -41,7 +44,7 @@ body {
       }
       .ok-btn {
         width: 90%;
-        background-color:  #FFD662 ;
+        background-color: #ffd662;
         margin-left: 5%;
         margin-right: 5%;
         font-weight: bold;
@@ -51,25 +54,25 @@ body {
   }
 
   .menu-cart {
-    display:flex;
+    display: flex;
   }
 
   main.container {
     width: 60%;
+    .card mb-3 {
+      background-color: ivory;
+    }
 
     .pizza-img {
       border: 3px black solid;
       margin: 1rem;
       border-radius: 20px;
     }
-
-
   }
   .add-btn {
     width: 100%;
     background-color: grey;
-    color:black;
+    color: black;
     border-radius: 7px;
   }
 }
-
