--- a/styles/restaurant.scss
+++ b/styles/restaurant.scss
@@ -1,6 +1,20 @@
 h1 {
   text-align: center;
 }
+body {
+  .navbar-brand {
+    font-size: 2rem;
+  }
+  .navbar {
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+
+    .loggedin {
+      color: white;
+      text-decoration: none;
+    }
+  }
+}
 
 .restaurant-container {
   width: 90vw;
@@ -9,33 +23,26 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: white;
+  background-color: transparent;
   #order-title {
     display: flex;
-    align-items:center;
-    // justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
     font-size: 1.25rem;
     font-weight: bold;
     font-size: 1rem;
-    border-bottom: darkblue 2px solid;
+    border: darkblue 2px solid;
+    border-radius: 20px;
+    padding: 5px 0;
     background-color: peachpuff;
     #order-details-title {
-      // border: gold 3px solid;
-      width: 70%;
       text-align: center;
       // border: blue 3px solid;
     }
     #est-time-title {
-      // border: springgreen 3px solid;
       text-align: center;
-
-      width: 15%;
-      // border:red 3px solid;
-      // margin-left: 1.25rem;
-      // margin-right: 1rem;
     }
     #completed {
-      width:15%;
       text-align: center;
       margin-left: 0.5rem;
       // border: blue 3px solid;
@@ -46,106 +53,137 @@ h1 {
     flex-direction: column;
 
     .one-order {
+      border-radius: 20px;
       margin-top: 1.5rem;
       margin-bottom: 1.5rem;
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
       border: black 3px solid;
 
       .order-details {
+        border-radius: 20px 0 0 0;
         display: flex;
         flex-direction: column;
-        width:70%;
+        width: 100%;
       }
-    .user-details {
-      // border: tomato 3px solid;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-      padding-top: 0.5rem;
-      padding-right: 1.5rem;
-      padding-left: 1.5rem;
-      div {
+      .user-details {
+        border-radius: 20px 20px 0 0;
+        height: 35%;
         display: flex;
-        margin-right: 1rem;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: rgb(247, 199, 158);
+        padding-top: 0.5rem;
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
+        div {
+          display: flex;
+          flex-direction: column;
+          margin-right: 1rem;
+        }
+        span {
+          font-weight: bold;
+          margin-right: 1rem;
+        }
       }
-      span {
-        font-weight: bold;
-        margin-right: 1rem;
+
+      .food-details {
+        border-top: 1px black solid;
+        border-bottom: 1px black solid;
+        padding: 1rem;
+        span {
+          font-weight: bold;
+        }
+        .total-price {
+          font-weight: normal;
+        }
+      }
+
+      .note-details {
+        padding: 1rem;
+        span {
+          font-weight: bold;
+        }
+        p {
+          background-color: rgb(247, 199, 158);
+        }
       }
     }
 
-    .food-details {
-      border-top: 1px black solid;
-      border-bottom: 1px black solid;
-      padding: 1rem;
-      span {
-        font-weight: bold;
+    .parent-container {
+      display: flex;
+    }
+    .empty-space {
+      display: flex;
+      width: 100%;
+      height: 120px;
+      background-color: rgb(247, 199, 158);
+    }
+
+    .sibling-container {
+      display: flex;
+    }
+
+    .time-container {
+      // border: red solid 3px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+      border-left: 1px solid black;
+      border-right: 1px solid black;
+      form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // padding: 0.5rem;
+        .estimated-time {
+          width: 80%;
+          height: 70%;
+          text-align: center;
+        }
       }
-      .total-price {
-        font-weight: normal;
+      .submit-btn {
+        background-color: lightgreen;
+        font-size: 1rem;
+        border-radius: 10px;
       }
     }
 
-    .note-details {
-      padding: 1rem;
-      span {
-        font-weight: bold;
-      }
-      p {
-        background-color: yellow;
+    .div-check {
+      display: flex;
+      // border: purple solid 4px;
+      width: 50%;
+      justify-content: center;
+      align-items: center;
+      input {
+        display: flex;
+        width: 3rem;
+        height: 3rem;
       }
     }
   }
-
-
-      .time-container {
-        // border: red solid 3px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 15%;
-        border-left: 1px solid black;
-        border-right: 1px solid black;
-        form {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          // padding: 0.5rem;
-          .estimated-time {
-            width: 80%;
-            height: 70%;
-            text-align: center;
-          }
-        }
-        .submit-btn {
-          background-color: lightgreen;
-          font-size: 1rem;
-          border-radius: 10px;
-        }
-      }
-
-      .div-check {
-        display:flex;
-        // border: purple solid 4px;
-        width: 15%;
-        justify-content: center;
-        align-items: center;
-        input {
-          display: flex;
-          width: 3rem;
-          height: 3rem;
-        }
-      }
-      }
 
   footer {
     border-top: 3px solid black;
     background-color: pink;
     margin-top: 2rem;
   }
-
 }
 
+$small: 300px;
+$medium: 900px;
+
+.smth {
+  //some CSS
+  @media screen and (max-width: $small) {
+    .restaurant-container {
+    }
+  }
+  @media screen and (min-width: $medium) {
+    //do Smth
+  }
+}
