--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -12,14 +12,6 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
-        <!-- </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a> -->
-        </li>
-        <!-- <li class="nav-item d-flex"> -->
       </ul>
       <div class="d-flex">
         <% if(!user){ %>
@@ -31,7 +23,7 @@
             </form>
           </div>
         <%} else if(user.id === 1) { %>
-          <label style="margin-right: 10px" for="logout">Logged in as <%= user.name %>  </label>
+          <a class='loggedin' style="margin-right: 10px" for="logout">Logged in as <%= user.name %>  </a>
           <form action='/'  method='GET' >
             <button class="me-2">Logout</button>
           </form>
@@ -39,7 +31,7 @@
             <button>Orders</button>
           </form>
         <% } else { %>
-          <label style="margin-right: 10px" for="logout">Logged in as <%= user.name %>  </label>
+          <a class='loggedin' style="margin-right: 10px" for="logout">Logged in as <%= user.name %>  </a>
           <form action='/' method='GET'>
             <button class="me-2">Logout</button>
           </form>
