--- a/styles/mycart.scss
+++ b/styles/mycart.scss
@@ -1,4 +1,3 @@
-
 .cart {
   margin: 3em;
   background-color: ivory;
@@ -13,7 +12,7 @@
   }
 
   .cart-title {
-    display:flex;
+    display: flex;
     justify-content: space-evenly;
     align-items: center;
     border-bottom: 3px black solid;
@@ -21,15 +20,19 @@
   }
 
   .cart-row {
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     border-bottom: 1px black solid;
     font-size: 1.25rem;
+
+    .item-price {
+      margin-right: 50px;
+    }
   }
 
   .cart-food-id {
-    color:red;
+    color: red;
     font: 1px;
     padding: 0px;
     font-size: 0.1px;
@@ -37,7 +40,7 @@
   }
 
   .cart-item {
-    display:flex;
+    display: flex;
     flex-direction: column;
     width: 33%;
     .cart-food-name {
@@ -46,13 +49,13 @@
   }
 
   .cart-quantity {
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     .counter {
-      display:flex;
+      display: flex;
       .minus-btn {
         background-color: #c0c0c0;
         border-radius: 3px;
@@ -77,17 +80,13 @@
       margin-top: 0.5rem;
       border-radius: 10px;
       font-size: 1rem;
-      background-color: #F56060;
+      background-color: #f56060;
     }
   }
-
-
 
   .cart-row-font {
     font-size: 1rem;
   }
-
-
 
   .math {
     display: flex;
@@ -103,15 +102,15 @@
   }
 
   .note-checkout {
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top:1rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
     // border: red solid 2px;
     .note {
-      display:flex;
+      display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -128,13 +127,10 @@
       width: 90%;
       #checkout-btn {
         width: 100%;
-        background-color: #AFE1AF;
+        background-color: #afe1af;
         font-weight: bold;
         border-radius: 10px;
       }
     }
   }
 }
-
-
-
