--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
                 <p class="card-text"><%= food_item.description %></p>
                 <h4 class="card-text text-end font-italic price">$<%= food_item.price_in_cents / 100 %></h4>
                 <div>
-                  <button class="add-btn">Add to Cart</button>
+                  <button class="add-btn btn btn-primary">Add to Cart</button>
                 </div>
               </div>
             </div>
