--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant Main Page</title>
+  <title>Pizza Admin</title>
 
 
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
@@ -31,8 +31,11 @@
 
     <div id="order-title">
       <div id="order-details-title">ORDER DETAILS</div>
-      <div id="est-time-title">ESTIMATED TIME<br>TO COMPLETE <br> (MINUTES)</div>
-      <div id="completed">COMPLETED</div>
+      <div class='time-completed'>
+        <div id="est-time-title">ESTIMATED TIME<br>TO COMPLETE <br> (MINUTES)</div>
+        <div id="completed">COMPLETED</div>
+    </div>
+
     </div>
 
     <div class="order-list">
